change tolist usage and import